--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,16 @@
+@import url(../../vendor/normalize.css);
+@import url(../../vendor/fonts.css);
+
 .App {
+  width: 100%;
+  font-family: 'Inter', 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +47,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
