--- a/src/components/StartPage/StartPage.css
+++ b/src/components/StartPage/StartPage.css
@@ -26,9 +26,9 @@
 }
 
 .page__but {
-  width: 70px;
-  height: 70px;
-  border-radius: 35px;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
   margin: 40px auto;
   background-color: var(--Orange-300);
   cursor: pointer;
