--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,8 @@
 
 .header__btn {
   width: 100px;
-  height: 46px;
+  height: 50px;
+  border-radius: 25px;
   background-color: var(--Orange-300);
   color: #fff;
   cursor: pointer;
