--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,7 +7,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .form__title {
@@ -37,17 +37,21 @@
 }
 
 .form__button {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  border: none;
   margin-top: 40px;
+  margin-bottom: 40px;
   background-color: var(--Orange-300);
   color: #fff;
   cursor: pointer;
 }
 
 .link__to-page {
+  width: 100%;
   text-decoration: none;
+  text-align: center;
   color: var(--Cyan-200);
   font-style: normal;
   font-size: 18px;
