--- a/src/components/WorkPage/WorkPage.css
+++ b/src/components/WorkPage/WorkPage.css
@@ -1,13 +1,20 @@
 .work__page {
-  padding: 40px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 50px;
 }
 
 .w-page__button {
-  width: 100%;
-  height: 46px;
+  width: 300px;
+  height: 50px;
   margin: 10px 0 20px;
   background: var(--Cyan-100);
-  border-radius: 8px;
+  border-radius: 25px;
   border: none;
-  color: #fff;
+  color: var(--Blue-400);
+}
+
+.w-page__button:hover {
+  background: var(--Cyan-200);
 }
