--- a/src/components/EditableTable/EditableTable.css
+++ b/src/components/EditableTable/EditableTable.css
@@ -1,79 +1,81 @@
 table {
-    padding: 25px;
-    margin: 50px auto;
+  padding: 25px;
+  margin: 0 auto;
 }
 
 th {
-    background-color: #1c07a4;
-    color: #EDE200;;
-    width: fit-content;
-    text-align: center;
-    padding: 25px;
+  background-color: #1c07a4;
+  color: #EDE200;
+  width: fit-content;
+  text-align: center;
+  padding: 25px;
 }
 
 tr {
-    padding: 15px;
+  padding: 15px;
+  color: #fff;
 }
 
 td {
-    background-color: rgba(26, 26, 219, 0.092);
-    position: relative;
+  background-color: rgba(26, 26, 219, 0.092);
+  position: relative;
 }
-  
-  .custom-table__action-btn {
-    cursor: pointer;
-    border: 1px solid #eee;
-    background: none;
-    margin-right: 5px;
 
-  }
+.custom-table__action-btn {
+  cursor: pointer;
+  border: 1px solid #eee;
+  background: none;
+  margin-right: 5px;
 
-  svg {
-    pointer-events: none;
-    padding: 5px;
-    width: 1.7em;
-    height: 1.7em;
-  }
+}
 
-  .form {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      text-align: center;
-  }
+svg {
+  pointer-events: none;
+  padding: 5px;
+  width: 1.7em;
+  height: 1.7em;
+}
 
-  .tible__buttons {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      padding: 0 50px 50px;
-  }
+.form {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
+}
 
-  .table__save {
-      cursor: pointer;
-      height: 40px;
-      font-size: 14px;
-      margin-right: 45px;
-      width: 200px;
-      border-radius: 15px;
-  }
+.tible__buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 50px 50px;
+}
 
-  .download {
-    cursor: pointer;
-    height: 40px;
-    background-color: #1c07a4;
-    width: 200px;
-    border-radius: 15px;
-  }
+.table__save {
+  cursor: pointer;
+  height: 40px;
+  font-size: 14px;
+  margin-right: 45px;
+  width: 200px;
+  border-radius: 15px;
+}
 
-  .download:hover {
-      background-color: rgba(28, 7, 164, 0.7);
-  }
-  .download__link {
-    color: white;
-    font-size: 14px;
-    text-decoration: none;
+.download {
+  cursor: pointer;
+  height: 40px;
+  background-color: #1c07a4;
+  width: 200px;
+  border-radius: 15px;
+}
 
-  }
+.download:hover {
+  background-color: rgba(28, 7, 164, 0.7);
+}
+
+.download__link {
+  color: white;
+  font-size: 14px;
+  text-decoration: none;
+
+}
