--- a/src/components/Snowfall/SnowFall.css
+++ b/src/components/Snowfall/SnowFall.css
@@ -2,7 +2,7 @@ html {
   height: 100%;
   /* background: linear-gradient(#000080 30%, #736AFF); */
   background: var(--Blue-400);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .snow, .snow:before, .snow:after {
