--- a/src/components/Pages/StartPage/StartPage.css
+++ b/src/components/Pages/StartPage/StartPage.css
@@ -24,7 +24,7 @@
   text-align: center;
 }
 
-.page__but {
+.page__btn {
   width: 100%;
   height: 50px;
   border-radius: 25px;
@@ -34,6 +34,6 @@
 }
 
 
-.page__but:hover {
+.page__btn:hover {
   background-color: var(--Orange-100);
 }
