--- a/src/components/Pages/WorkPage/WorkPage.css
+++ b/src/components/Pages/WorkPage/WorkPage.css
@@ -2,7 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 50px;
+  padding: 0 50px 50px;
+}
+
+.w-page__title {
+  margin: 0;
+  margin-bottom: 30px;
+  color: var(--Yellow-300);
 }
 
 .w-page__button {
