--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,7 @@
   width: 100px;
   height: 50px;
   border-radius: 25px;
+  border: none;
   background-color: var(--Orange-300);
   color: #fff;
   cursor: pointer;
