--- a/src/components/Pages/StartPage/StartPage.css
+++ b/src/components/Pages/StartPage/StartPage.css
@@ -28,6 +28,7 @@
   width: 100%;
   height: 50px;
   border-radius: 25px;
+  border: none;
   margin: 40px auto;
   background-color: var(--Orange-300);
   cursor: pointer;
