--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -13,6 +13,7 @@
   width: 100px;
   height: 50px;
   border-radius: 25px;
+  border: none;
   background-color: var(--Orange-300);
   color: #fff;
   cursor: pointer;
