--- a/src/components/EditableTable/EditableTable.css
+++ b/src/components/EditableTable/EditableTable.css
@@ -8,37 +8,38 @@ table {
 }
 
 th {
-
-  background-color: #1c07a4;
+    background-color: #1c07a4;
     color: white;
     width: fit-content;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: center;
     padding: 25px;
- /* background-color: #1c07a4;
-  color: #EDE200;
-  width: fit-content;
-  text-align: center;
-  padding: 25px;*/
 }
 
 tr {
+  
   padding: 15px;
-  color: #fff;
+  color: white;
+  font-size: 20px;
+  border-radius: 15px;
 }
 
 td {
-  background-color: rgba(26, 26, 219, 0.092);
   position: relative;
 }
 
 .custom-table__action-btn {
   cursor: pointer;
   border: 1px solid #eee;
-  background: none;
+  background-color: var(--Cyan-100);
   margin-right: 5px;
+  border-radius: 5px;
+  margin-bottom: 3px;
+}
 
+.custom-table__action-btn:last-of-type {
+  margin-bottom: 0;
 }
 
 svg {
@@ -57,35 +58,14 @@ svg {
   text-align: center;
 }
 
-.table__buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 0 50px 50px;
-}
-
-.table__save {
-  cursor: pointer;
-  height: 50px;
-  font-size: 14px;
-  margin-right: 45px;
-  width: 200px;
-  border-radius: 25px;
-  border: none;
-  background-color: var(--Cyan-100);
-}
-
-.table__save:hover {
-  background-color: var(--Cyan-200);
-}
-
 .download {
   cursor: pointer;
   height: 50px;
   background-color: #1c07a4;
   width: 200px;
   border-radius: 25px;
-
+  border: 3px solid var(--Orange-300);
+  margin-top: 50px;
 }
 
 .download:hover {
