--- a/src/components/Pages/Login/Login.css
+++ b/src/components/Pages/Login/Login.css
@@ -29,11 +29,19 @@
 
 .form-input {
   width: 396px;
-  height: 46px;
+  height: 16px;
   margin: 10px 0 20px;
   background: var(--Cyan-100);
   border-radius: 8px;
   border: none;
+  padding: 15px;
+  box-sizing: border-box;
+  border: 3px solid white;
+}
+
+.form-input:focus {
+  outline: none;
+  border: 3px solid var(--Orange-300);
 }
 
 .form__button {
